Simplify html. Give container for javascript to render within.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,15 +20,10 @@
       </div>
     </nav>
     <div class="block"></div>
-    <div class="columns is-mobile is-centered">
-      <div class="column is-half">
-        <img>
-      </div>
-      <div class="column is-half">
-        <canvas id="sketchpad"></canvas>
-      </div>
+    <div class="container is-fluid card" id="sketchpad">
     </div>
   
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="sketch.js"></script>
   </body>
 </html>
