Adjust spacing and styling.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,8 +20,9 @@
       </div>
     </nav>
     <div class="block"></div>
-    <div class="container is-fluid card" id="sketchpad">
+    <div class="container is-fluid" id="sketchpad">
     </div>
+    <div class="block"></div>
   
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="sketch.js"></script>
