Adjust styling/format of page.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,18 +8,18 @@
   </head>
   <body>
     <nav class="navbar is-primary" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand is-transparent">
-        <p class="title">JavaSketcher</p>
+      <div class="navbar-brand">
+        <p class="navbar-item title">JavaSketcher</p>
       </div>
       <div class="navbar-menu">
         <div class="navbar-start">
         </div>
         <div class="navbar-end">
-
+          <p class="navbar-item">All Sketches</p>
         </div>
       </div>
     </nav>
-    <div class="block"></div>
+    <nav class="toolbar level is-transparent"></nav>
     <div class="container is-fluid" id="sketchpad">
     </div>
     <div class="block"></div>
