Stub out index container format.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,11 +20,24 @@
       </div>
     </nav>
     <nav class="toolbar level is-transparent"></nav>
+    <div class="container is-fluid" id="index">
+      <div class="tile is-ancestor">
+        <div class="tile is-parent is-vertical" id="tile-column-1">
+          <div class="tile is-child box"></div>
+        </div>
+        <div class="tile is-parent is-vertical" id="tile-column-2">
+          <div class="tile is-child box"></div>
+        </div>
+        <div class="tile is-parent is-vertical" id="tile-column-3">
+          <div class="tile is-child box"></div>
+        </div>
+      </div>
+    </div>
     <div class="container is-fluid" id="sketchpad">
     </div>
     <div class="block"></div>
   
     <script type="text/javascript" src="index.js"></script>
-    <script type="text/javascript" src="sketch.js"></script>
+    <script type="text/javascript" src="sketchpad.js"></script>
   </body>
 </html>
