--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,13 +23,10 @@
     <div class="container is-fluid" id="index">
       <div class="tile is-ancestor">
         <div class="tile is-parent is-vertical" id="tile-column-1">
-          <div class="tile is-child box"></div>
         </div>
         <div class="tile is-parent is-vertical" id="tile-column-2">
-          <div class="tile is-child box"></div>
         </div>
         <div class="tile is-parent is-vertical" id="tile-column-3">
-          <div class="tile is-child box"></div>
         </div>
       </div>
     </div>
@@ -39,5 +36,6 @@
   
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="sketchpad.js"></script>
+    <script type="text/javascript" src="sketch.js"></script>
   </body>
 </html>
