Stub out show div for a sketch.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,6 +20,29 @@
       </div>
     </nav>
     <nav class="toolbar level is-transparent"></nav>
+    <div class="container is-fluid" id="show">
+      <div class="level"><img class="level-item" id="show-sketch-image"></div>
+      <div class="box">
+        <article class="media">
+          <div class="media-content">
+            <form>
+              <div class="field">
+                <label class="label">Name</label>
+                <div class="control">
+                  <input class="input" type="text" id="name">
+                </div>
+              </div>
+              <div class="field">
+                <textarea class="textarea" rows="5" id="content"></textarea>
+              </div>
+              <div class="field">
+                <button class="button" type="submit">Submit</button>
+              </div>
+            </form>
+          </div>
+        </article>
+      </div>
+    </div>
     <div class="container is-fluid" id="index">
       <div class="tile is-ancestor">
         <div class="tile is-parent is-vertical" id="tile-column-1">
