Add footer element.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,7 @@
     <nav class="toolbar level is-transparent"></nav>
     <div class="container is-fluid" id="show">
       <div class="level"><img class="level-item" id="show-sketch-image"></div>
+      <div class="container" id="comments"></div>
     </div>
     <div class="container is-fluid" id="index">
       <div class="tile is-ancestor">
@@ -36,7 +37,8 @@
     </div>
     <div class="container is-fluid" id="sketchpad">
     </div>
-    <div class="block"></div>
+    <div class="block" id="spacer"></div>
+    <footer class="footer"></footer>
   
     <script type="text/javascript" src="index.js"></script>
     <script type="text/javascript" src="sketchpad.js"></script>
