Make styling tweaks. Makes sketch containers fit content width.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,9 +22,9 @@
     </nav>
     <nav class="toolbar level is-transparent"></nav>
     <div class="container is-fluid" id="show">
-      <article class="media box">
+      <article class="media box show-sketch">
         <div class="media-content">
-          <img class="level-item" id="show-sketch-image">
+          <img id="show-sketch-image">
         </div>
         <div class="media-right">
           <p id="rating" class="subtitle"></p>
