Remove order by rating button.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,7 @@
     </div>
     <div class="container is-fluid" id="index">
       <div class="level">
-        <button id="order-by-rating" class="button">Order by Rating</button>
+        <!-- <button id="order-by-rating" class="button">Order by Rating</button> -->
       </div>
       <div class="tile is-ancestor">
         <div class="tile is-parent is-vertical" id="tile-column-1">
